<resources>
    <string name="app_name">Digital_socity</string>
    <string name="password">Password</string>
    <string name="e_mail_id">E-mail</string>
    <string name="request_to_register">Register</string>
    <string name="don_t_have_member_account">Don\'t have member account?</string>
    <string name="login">Login</string>
    <string name="todo">TODO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Register</string>
    <string name="contact_no">Contact No</string>
    <string name="house_no">House No</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
</resources>